Refine project docs and add Chinese translations